server/public/css/all_goals.css
html{
    font-size: 10px;
    width: 100vw;
    height: 100vh;
    background-color: white;

}
/************************************ALL GOALS BODY **********/
body{
    height: 100%;
    min-height: 100%;
    background-color: #F2F2F2;
}

.all-goals-container{
    width: 100%;
    height: 91%;
    position: relative;
    background-color: #F2F2F2;
}

/************************************ Title **********/

.title-bar{
    width: 100%;
    height: 5rem;
    background-color: #A2D3DA;
    font-size: 3rem;
    color: white;
    font-family: 'Alegreya Sans SC', sans-serif;
    font-weight: bolder;
    letter-spacing: 5px;
    text-align: center;
    padding-top: 1%;
}

.description{
    height: 2rem;
    width: 100%;
    background-color: #A2D3DA;
    color: white;
    font-size: 1.3rem;
    letter-spacing: 2px;
    text-align: center;
    border-bottom: 1px solid black;
    padding-bottom: 23px;
}

/************************************GOAL SECTION **********/

.all-goals-list{
    width: 100%;
    height: 90%;
    overflow-y: auto;
    font-size: 1.2em;  
}

/************************************ MESSAGE SECTION **********/
.message {
    background-color: white;
    width: 60%;
    position: relative;
    margin: 15% auto 0;
}

.message p{
    font-family: 'Roboto', sans-serif;
    font-size: 1.5rem;
    text-align: center;
    padding-top: 5%;

}

a.btn.btn-small{
    font-family: 'Roboto', sans-serif;
    font-size: 1.3rem;
    border-radius: 10px;
    background-color: rgb(119, 178, 186);
    position: relative;
    left: 50%;
    transform: translate(-50%, 0);
    margin-bottom: 5%;
    font-weight: bold;
}

/**********INDIVIDUAL GOALS**********/
.goal-container{
    display: inline-flex;
    padding: 2% 7% 2% 4%;
    width: 100%;
    text-align: center;
     
}

.goal-description{
    background-color: #A2D3DA;
    width: 87%;
    padding: 2% 3% 2% 7%;
    font-size: 1.25em;
    justify-content: center;
    font-family: 'Roboto', sans-serif;
    hyphens: auto;
    color: white;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

.dayName {
    height: 90%;
    width: 1%;
    /* transform: translate(130%, 0%);
    font-size: 0.60em; */
    transform: translate(130%, 60%);
    font-size: 1rem;
}

.timeOfDayImage {
    height: 24%;
    width: 6%;
    transform: translate(130%, 0%);
    
}

/**********INDIVIDUAL BUTTONS**********/

.button-container{
    display: inline-flex;
    width: 12%;
    height: auto;
}

.goal-button{
    width: 100%;
    height: 100%;
    background-color: #FFE2A8;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    background: linear-gradient(97deg, rgba(162, 211, 218, 1) 0%,
                                        rgba(255,226,168, 0.6) 100%);

}

.button-container > .dropdown-content {
    background-color: #F2F2F2;    
}

.button-container > .dropdown-content li {
    text-align: center;
}

.button-container > .dropdown-content li > a > i{
    /* float: none; */
    margin: 0;
    
}

button.dropdown-button.dropdown-trigger.goal-button {
    border: transparent;
}

.shadow{
    box-shadow: 2px 0px 15px 5px rgba(255, 255, 255, 0.3);
    vertical-align: middle;
}


/************************************END - GOAL SECTION **********/



/************************************FOOTER**********/


.footer-container{
    height: 9%;
    border-top: 1px rgb(87, 87, 87) solid;
    position: absolute;
    bottom: 0;
    width: 100%;
    max-width: 600px;
    background-color: #A2D3DA
}

nav{
    background-color: #A2D3DA;
    height: 100%;

}

.footer-items{
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    align-items: center;

    
}

nav ul li{
    width: 25%;
}

.footer-items a i{
    font-size: 3rem;
    vertical-align: 100%;
}
/************************************END - FOOTER**********/


/************************* Responsive *************************/

@media only screen and (min-width: 600px){
    body{
        max-width: 600px;
        margin: 0 auto;
    }
}

